# hi

./: hi.cabal
Example/: Classic.hi  PA.hi  ZFC.hi
src/: Main.hs
src/Hi/: Header.hs  Main.hs
src/Hi/Core/: CoreDefs.hs
