name: hi
version: 0.0.0.0
synopsis: A simple proof assistant.
description: Please see README.md
homepage: https://github.com/KiJeong-Lim/hi
license: BSD3
license-file: LICENSE
author: KiJeong-Lim
maintainer: gijungdduk@naver.com
copyright: 2020, KiJeong-Lim
build-type: Simple
cabal-version: >= 1.10

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, pretty-terminal >= 0.1.0.0
    exposed-modules:
    other-modules:

executable hi
    hs-source-dirs: src
    main-is: Main.hs
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5, containers >= 0.6, transformers >= 0.5, pretty-terminal
    other-modules:
